blockml/test/valid/06_calc_refs_calc/v15/v15m.model
model: v15m
joins:

- from_view: v15_one
  as: a

fields:

- calculation: calc2
  sql: ${a.calc1} + 700

