blockml/test/errors/04_model/e50/e50m.model
model: e50m
joins:
- from_view: e50_one
  as: a

fields:
- dimension: dim1
  sql: ${a.unk}      

- dimension: dim2
  sql: ${dim1}    
